--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service android:name=".MyService"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -26,6 +27,5 @@
         </activity>
     </application>
 
-    <service android:name="com.example.it20.MyService"/>
 
 </manifest>
