--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
     package="com.example.it20">
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission
-        android:name="android.permission.PACKAGE_USAGE_STATS"
-        tools:ignore="ProtectedPermissions" />
+
 
     <application
         android:allowBackup="true"
@@ -15,6 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service android:name=".MyService"/>
+        <service
+        android:label="accessibility_service_name"
+        android:name=".WindowChangeDetectingService"
+        android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+        <intent-filter>
+            <action android:name="android.accessibilityservice.AccessibilityService"/>
+        </intent-filter>
+        <meta-data
+            android:name="android.accessibilityservice"
+            android:resource="@xml/windowchangedetectingservice"/>
+        </service>
+        <uses-permission
+            android:name="android.permission.PACKAGE_USAGE_STATS"
+            tools:ignore="ProtectedPermissions" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
